--- a/practice.html
+++ b/practice.html
@@ -7,6 +7,9 @@
     <title>hello</title>
 </head>
 <body>
+    <p>salam aleykom 
+        aleykom alsalam
+    </p>
  <script src="practice.js"></script>
     
 </body>
