--- a/practice.html
+++ b/practice.html
@@ -9,6 +9,8 @@
 <body>
     <p>salam aleykom 
         aleykom alsalam
+        dirin dirin
+        
     </p>
  <script src="practice.js"></script>
     
